aws-sdk-compile-checks-usage/tests/fails/attributes_wrong_sdk_separators.stderr
error: expected one or more SDKs, separated by `,` after keyword `sdk`, e.g. `sdk = sqs,s3`
 --> tests/fails/attributes_wrong_sdk_separators.rs:3:27
  |
3 | #[required_props(sdk = sqs/s3)]
  |                           ^
